<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:paddingLeft="8dp" android:paddingTop="8dp" android:paddingRight="8dp">

    <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <ImageView
                android:id="@+id/app_detail_icon"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentLeft="true"
                />
        <TextView
                android:id="@+id/app_detail_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@id/app_detail_icon"
                android:gravity="center_vertical"
                android:textSize="18sp"
                android:textStyle="bold"
                android:singleLine="true"
                android:marqueeRepeatLimit="1"
                android:ellipsize="marquee"
                android:scrollHorizontally="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                />
        <Button
                android:id="@+id/app_detail_button"
                android:onClick="downloadOnClick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:layout_alignParentRight="true"
                android:layout_below="@id/app_detail_title"
                android:layout_alignBottom="@id/app_detail_icon"
                android:background="@drawable/button_download"
                android:textSize="16sp"
                android:text="@string/download"
                />
        <TextView
                android:id="@+id/app_detail_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@id/app_detail_icon"
                android:layout_toLeftOf="@id/app_detail_button"
                android:layout_alignBottom="@id/app_detail_icon"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:ellipsize="end"
                />
    </RelativeLayout>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/detail_app_size"
                            />
                    <TextView
                            android:id="@+id/app_detail_size"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="#FF606060"
                            android:singleLine="true"
                            android:ellipsize="end"
                            />
                </LinearLayout>
                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/detail_app_tag"
                            />
                    <TextView
                            android:id="@+id/app_detail_tag"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="#FF606060"
                            android:singleLine="true"
                            android:ellipsize="end"
                            />
                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/detail_sdk_requirement"
                            />
                    <TextView
                            android:id="@+id/app_detail_sdk"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="#FF606060"
                            android:singleLine="true"
                            android:ellipsize="end"
                            />
                </LinearLayout>
                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/detail_installed_count"
                            />
                    <TextView
                            android:id="@+id/app_detail_count"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="#FF606060"
                            android:singleLine="true"
                            android:ellipsize="end"
                            />
                </LinearLayout>
            </LinearLayout>

            <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">
                <TextView
                        android:id="@+id/app_detail_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />
                <ProgressBar
                        android:id="@+id/app_detail_progressbar"
                        android:layout_width="24dp"
                        android:layout_height="64dp"
                        android:layout_gravity="center"
                        />

            </FrameLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>